# python-dnstapir

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
dnstapir/: __init__.py  jws.py  key_cache.py  key_resolver.py  logging.py  opentelemetry.py  starlette.py  structlog.py  structlog_starlette.py
dnstapir/dns/: mozpsl.py
tapir/: key_cache.py  logging.py  telemetry.py
tests/: test_dns_mozpsl.py  test_jws.py  test_key_cache.py  test_key_resolver.py  test_logging.py  test_opentelemetry.py  test_starlette.py  test_structlog.py  test_telemetry.py
