[tool.poetry]
name = "dnstapir"
version = "1.0.1"
description = "DNS TAPIR Python Library"
authors = ["Jakob Schlyter <jakob@kirei.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jsonformatter = "^0.3.2"
opentelemetry-api = { version = "^1.28.1", optional = true }
opentelemetry-exporter-otlp = { version = "^1.28.1", optional = true }
opentelemetry-instrumentation-botocore = { version = ">=0.48b0", optional = true }
opentelemetry-instrumentation-fastapi = { version = ">=0.48b0", optional = true }
opentelemetry-instrumentation-pymongo = { version = ">=0.48b0", optional = true }
opentelemetry-instrumentation-redis = { version = ">=0.48b0", optional = true }
botocore = { version = "^1.35.16", optional = true }
fastapi = { version = ">=0.115.2", optional = true }
cryptography = { version = "^43.0.3", optional = true }
faas-cache-dict = { version = "^0.5.0", optional = true }
httpx = { version = ">=0.27.2", optional = true }
pydantic = { version = "^2.9.2", optional = true }
pymongo = { version = "^4.10.1", optional = true }
redis = { version = "^5.1.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = ">=0.7.0"
pytest-ruff = "^0.4.1"
fakeredis = "^2.25.1"
pytest-httpx = "^0.34.0"

[tool.poetry.extras]
keymanager = [
    "cryptography",
    "faas-cache-dict",
    "httpx",
    "opentelemetry-api",
    "pydantic",
    "pymongo",
    "redis",
]
opentelemetry = [
    "botocore",
    "fastapi",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-botocore",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-pymongo",
    "opentelemetry-instrumentation-redis",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
combine-as-imports = true
split-on-trailing-comma = false
