[project]
name = "dnstapir"
version = "1.6.0"
description = "DNS TAPIR Python Library"
authors = [{name="Jakob Schlyter", email = "jakob@kirei.se"}]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "structlog>=25.2.0",
    "cryptography>=44.0.2",
    "httpx>=0.28.1",
    "jwcrypto>=1.5.6",
    "opentelemetry-api>=1.31.0",
    "pydantic>=2.10.6",
    "pymongo>=4.11.3",
    "redis>=5.2.1",
    "ttlru-map>=1.1.0",
    "botocore>=1.36.1",
    "fastapi>=0.115.11",
    "opentelemetry-api>=1.31.0",
    "opentelemetry-exporter-otlp>=1.31.0",
    "opentelemetry-instrumentation-botocore>=0.52b0",
    "opentelemetry-instrumentation-fastapi>=0.52b0",
    "opentelemetry-instrumentation-pymongo>=0.52b0",
    "opentelemetry-instrumentation-redis>=0.52b0",
]

[project.urls]
repository = "https://github.com/dnstapir/python-dnstapir.git"

[dependency-groups]
dev = [
    "aiobotocore>=2.19.0",
    "fakeredis>=2.27.0",
    "pytest>=8.3.5",
    "pytest-httpx>=0.35.0",
    "pytest-ruff>=0.4.1",
    "ruff>=0.11.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
combine-as-imports = true
split-on-trailing-comma = false
